--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "bootstrap": "^5.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^17",
     "react-router-dom": "^5.3.4",
-    "vite": "^5.0.10",
+    "vite": "^5.0.11",
     "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.2.2"
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "scripts": {
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "serve": "vite preview"
-   
   },
   "browserslist": {
     "production": [
